acccept btn and answer h2 alignment

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -33,7 +33,7 @@
     overflow: hidden;
     border-radius: 0 4px 0 36px;
     background-color: @color-light-grey;
-    border: solid 0.5px #dddddd;
+    //border: solid 0.5px #dddddd;
     border-top: 0;
     border-left: 0;
     font-size: 18px;
@@ -66,6 +66,8 @@
       text-align: left;
       font-size: 16px;
       outline: none;
+      position: absolute;
+      right: 12px;
       .sbf {
         color: @color-white;
         font-size: 16px;
@@ -89,6 +91,9 @@
       color: #ff0000;
       font-size: 12px;
       letter-spacing: -0.2px;
+      position: absolute;
+      right: 12px;
+      top: 12px;
       .sbf {
         color: #7ed321;
         font-size: 32px;
