--- a/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
@@ -175,6 +175,10 @@
                             display: block;
                         }
                     }
+                    &:checked ~ .title-label {
+                        color: @color-blue;
+
+                    }
                 }
 
                 .checkmark {
