--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -333,7 +333,8 @@
     }
   }
   .red-counter {
-    top: 7px;
+    top: -7px;
+    right:-7px;
     @media (max-width: @screen-xs) {
       top: 0px;
     }
