--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -1,12 +1,27 @@
 @import "../../../mixin.less";
 
-
 .ask_question {
+  .error-block {
+    text-align: center;
+    color: @color-red;
+  }
+  .text-red {
+    color: @color-red;
+  }
+  .has-error {
+    border: 1px solid @color-red;
+  }
   .container {
     max-width: 610px;
     margin-top: 30px;
     padding-bottom: 0;
-
+    .input-error {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      color: @color-red;
+    }
     @media (max-width: @screen-xs) {
       max-width: none;
       margin-top: 0px;
@@ -14,8 +29,8 @@
       height: 100%;
     }
   }
-  .general-cell{
-    @media(max-width: @screen-xs){
+  .general-cell {
+    @media (max-width: @screen-xs) {
       border-radius: 0;
       box-shadow: none;
     }
@@ -24,12 +39,12 @@
     margin-bottom: 17px;
     &.last-text-block {
       letter-spacing: -0.3px;
-      margin-bottom: 28px;    
-      @media (max-width: @screen-xs) { margin-bottom: 0px; }
+      margin-bottom: 28px;
+      @media (max-width: @screen-xs) {
+        margin-bottom: 0px;
+      }
     }
   }
-
-  
 
   .back-button {
     float: right;
@@ -39,7 +54,9 @@
     position: relative;
     outline: none;
 
-    @media (max-width: @screen-xs) {top: 9px;}
+    @media (max-width: @screen-xs) {
+      top: 9px;
+    }
 
     .icon {
       color: @color-main-purple;
@@ -61,31 +78,35 @@
     @media (max-width: @screen-xs) {
       width: 33px;
       height: 33px;
-      top: 3px;}
+      top: 3px;
+    }
 
     img {
       width: 31px;
       height: 29px;
       margin: 10px 9px;
-      @media (max-width: @screen-xs) { 
+      @media (max-width: @screen-xs) {
         width: 20px;
         height: 19px;
-        margin: 7px 6px;}
+        margin: 7px 6px;
+      }
 
     }
   }
 
-  .my-points{
+  .my-points {
     font-size: 15px;
     line-height: 1.39;
     letter-spacing: 0;
     margin: 0;
     margin-bottom: 17px;
-    @media (max-width: @screen-xs) { margin-bottom: 0px; }
-    &.text-blue{
+    @media (max-width: @screen-xs) {
+      margin-bottom: 0px;
+    }
+    &.text-blue {
       color: @color-main-purple;
     }
-    &.text-red{
+    &.text-red {
       color: red;
     }
   }
@@ -120,7 +141,9 @@
     -webkit-appearance: menulist;
     font-weight: bold;
 
-    @media (max-width: @screen-xs) { padding: 9px; }
+    @media (max-width: @screen-xs) {
+      padding: 9px;
+    }
   }
 
   .submit-btn-wrap {
@@ -135,32 +158,32 @@
     }
   }
 
-  .points-list{
+  .points-list {
     display: flex;
-    @media(max-width: @screen-xs){
+    @media (max-width: @screen-xs) {
       flex-direction: column;
     }
     //list-style-type: none;
-    .points-line{
+    .points-line {
       display: flex;
       flex-grow: 1;
       margin-bottom: 16px;
-      &:first-child .point-btn{
+      &:first-child .point-btn {
         flex-grow: 1;
       }
 
-      &:last-child{
-        @media(min-width: @screen-xs) {
+      &:last-child {
+        @media (min-width: @screen-xs) {
           max-width: 320px;
         }
       }
-      .point-btn:last-child{
-        @media(max-width: @screen-xs) {
+      .point-btn:last-child {
+        @media (max-width: @screen-xs) {
           margin-right: 0;
         }
       }
     }
-    .point-btn{
+    .point-btn {
       //width: 100%;
       //max-width: 82px;
       //line-height: 46px;
@@ -171,38 +194,38 @@
       text-align: center;
       color: #888b8e;
 
-      &.pts-5{
+      &.pts-5 {
         max-width: 72px;
       }
       &.pts-80 {
         //@media(max-width: @screen-xs) {
-          width: 40%;
+        width: 40%;
         //}
       }
 
-      input[type="radio"]{
+      input[type="radio"] {
         display: none;
-        & ~ label{
+        & ~ label {
           width: 100%;
           height: 100%;
           display: block;
           line-height: 46px;
         }
-        &:checked ~ label{
+        &:checked ~ label {
           background-color: @color-blue;
           color: @color-white;
           border-color: @color-blue;
         }
       }
-      &.other{
+      &.other {
         position: relative;
-        max-width: 233px;  
+        max-width: 233px;
         width: 100%;
         margin-right: 0px;
-        border:none;
+        border: none;
         padding: 0;
         text-align: left;
-        .sbf-hand-coin{
+        .sbf-hand-coin {
           position: absolute;
           top: 0;
           bottom: 0;
@@ -217,7 +240,6 @@
           height: 48px;
           -moz-appearance: textfield;
 
-
           /* Webkit browsers like Safari and Chrome */
           &::-webkit-inner-spin-button,
           &::-webkit-outer-spin-button {
@@ -225,10 +247,10 @@
             margin: 0;
           }
 
-          &:focus{
+          &:focus {
             outline: none;
             border-color: @color-blue;
-            ~.sbf-hand-coin{
+            ~ .sbf-hand-coin {
               color: @color-blue;
             }
           }
@@ -251,7 +273,6 @@
     }
   }
 
-
   .btn.ask_btn {
     position: relative;
     height: 48px;
@@ -270,7 +291,7 @@
   }
   .ask_btn.primary {
     background-color: @color-main-purple !important;
-  } 
+  }
 
 }
 
