--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -177,8 +177,8 @@
     <!-- End Inspectlet Embed Code -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-    window.version2 = '@version';
-        window.version = '8.7.2';
+    window.version = '@version';
+        window.version2 = '8.7.2';
         window.publicPath = '@cdnEndPoint' + '/dist/';
     window.baseURL = '@Configuration["ApiEndpoint"]';
     window.isAuth = @User.Identity.IsAuthenticated.ToString().ToLower();
