--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -1,6 +1,9 @@
 @import "../../../mixin.less";
 
 .ask_question {
+  .inputBorder{
+    border: 1px solid transparent;
+  }
   .error-block {
     text-align: center;
     color: @color-red;
