delete answer fixed, wallet  cashout redeem

--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -221,6 +221,9 @@
         }
       }
       &.other {
+        &.has-error{
+          border: 1px solid @color-red;
+        }
         position: relative;
         max-width: 233px;
         width: 100%;
