--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -44,6 +44,10 @@
   }
 
   .chat-wrapper {
+    max-height: fit-content;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 75px; /* required */
     width: 100%;
     max-width: 304px;
     margin-left: 32px;
