--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -113,6 +113,56 @@
 
 .registration {
 
+  .snack__content {
+    margin-top: 24px;
+    width: 616px;
+    height: 48px;
+    background-color: @color-blue;
+    font-size: 16px;
+    line-height: 1.35;
+    letter-spacing: -0.4px;
+    color: #ffffff;
+    .text-wrap {
+      width: 100%;
+      text-align: center;
+    }
+    .undo-btn {
+      text-decoration: underline;
+      margin-left: 42px;
+    }
+    .close-btn {
+      font-size: 0;
+      padding: 10px;
+      margin-right: -10px;
+      i {
+        color: @color-white;
+        font-size: 14px;
+      }
+    }
+    a{
+      color: @color-white;
+      text-decoration: underline;
+    }
+    a.toast_action{
+      height: 26px;
+      width: 60px;
+      border-radius: 26.5px;
+      border: solid 1px  @color-white;
+      font-size: 18px;
+      outline: none;
+      align-items: center;
+      justify-content: center;
+      color: @color-white;
+      letter-spacing: -0.5px;
+      padding: 0 20px;
+      min-width: 104px;
+      background-color: transparent;
+      text-decoration: none;
+    }
+    span.toast-helper{
+      padding: 0 6px;
+    }
+  }
   .step-title {
     text-align: center;
     font-size: 26px;
