redeem function and take back to balance, toaster login deswign update.disqusion board hidden for not loged in

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -182,7 +182,12 @@
 
       }
       .carousel__item {
-        background-size: contain;
+        //background-size: contain;
+        background-size: cover;
+        -webkit-background-size: auto 100%;
+        -moz-background-size: auto 100%;
+        -o-background-size: auto 100%;
+        background-size: auto 100%;
       }
     }
   }
