--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -428,22 +428,28 @@
     text-decoration: underline;
   }
   a.toast_action{
-    height: 26px;
+    height: 32px;
     width: 60px;
+    padding: 3px 20px;
     border-radius: 26.5px;
     border: solid 1px  @color-white;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 200;
     outline: none;
     align-items: center;
     justify-content: center;
     color: @color-white;
     letter-spacing: -0.5px;
-    padding: 0 20px;
+    line-height: 1.39;
     min-width: 104px;
     background-color: transparent;
     text-decoration: none;
+    &:first-child{
+      margin-left: 14px;
+    }
   }
   span.toast-helper{
     padding: 0 6px;
+    font-weight: 200;
   }
 }
