--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -17,10 +17,15 @@
         line-height: 1.25;
         letter-spacing: -0.5px;
         width: 100%;
-        line-height: 40px;
         display: block;
         text-align: center;
         margin-bottom: 17px;
+        //To DO button animation
+        //-webkit-transition: all .2s ease-in-out;
+        //transition: all .2s ease-in-out;
+        //&:hover {
+        //    background-color: #1E6FC2;
+        //}
     }
 
     .card-block{
