registration logic changed

--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -14,7 +14,7 @@
         color: @color-white;  
         font-size: 20px;
         font-weight: bold;
-        line-height: 1.25;
+        line-height: 40px;
         letter-spacing: -0.5px;
         width: 100%;
         display: block;
